<resources>
    <string name="app_name" translatable="false">Kickly</string>

    <string name="profile">Player profile</string>
    <string name="manage">Manage</string>
    <string name="watching">Watching</string>
    <string name="example_profile_name">John Doe</string>
    <string name="previous_match">previous match</string>
    <string name="next_match">next match</string>
    <string name="daysLeft">in %1$d days</string>
    <string name="hoursLeft">in %1$d hours</string>
    <string name="minutesLeft">in %1$d minutes</string>
    <string name="matches">matches</string>
    <string name="now">now</string>
    <string name="teams">teams</string>
    <string name="teams_capitalized">Teams</string>
    <string name="group_stage">group stage</string>
    <string name="knockout_stage">knockout stage</string>
    <string name="group_x">Group %1$s</string>
    <string name="stats">stats</string>
    <string name="prognosis">prognosis</string>
    <string name="total_attempts">total attempts</string>
    <string name="attempts_on_target">attempts on target</string>
    <string name="fouls_commited">fouls committed</string>
    <string name="yellow_cards">yellow cards</string>
    <string name="red_cards">red cards</string>
    <string name="offsides">offsides</string>
    <string name="corners">corners</string>
    <string name="possession">possession</string>
    <string name="stats_capitalized">Stats</string>
    <string name="details">Details</string>
    <string name="finished">finished</string>
    <string name="no_matches_scheduled">no matches scheduled</string>
    <string name="no_teams_registered">no teams registered</string>
    <string name="locations">Locations</string>
    <string name="tournaments">Tournaments</string>
    <string name="manage_tournaments">Manage Tournaments</string>
    <string name="manage_teams">Manage Teams</string>
    <string name="manage_locations">Manage Locations</string>
    <string name="big_stats">Stats</string>
    <string name="location_name">Location Name</string>
    <string name="finish">finish</string>
    <string name="create">create</string>
    <string name="please_choose_an_icon">please choose an icon</string>
    <string name="please_choose_a_team_name">please choose a team name</string>
    <string name="please_choose_a_location_name">please choose a location name</string>
    <string name="team_name">team name</string>
    <string name="insert_name">Insert Name</string>
    <string name="location">Location</string>
    <string name="big_tournament_name">Tournament name</string>
    <string name="tournament_name">tournament name</string>
    <string name="m_for_matches">M</string>
    <string name="pts_for_points">Pts</string>
    <string name="gs_for_goals_scored">GS</string>
    <string name="gc_for_goals_conceded">GC</string>
    <string name="dif_for_difference">Dif</string>
    <string name="manage_matches">Manage Matches</string>
    <string name="score">score</string>
    <string name="possessionPercent">possession (%)</string>
    <string name="select">SELECT</string>
    <string name="selectDateAndTime">select date and time</string>
    <string name="same_team_select">You can\'t select the same team for both sides</string>
    <string name="please_choose_a_tournament_name">please choose a tournament name</string>
    <string name="not_watching_tournaments">you are not watching any tournament</string>
    <string name="no_locations_yet">there are no locations yet</string>
    <string name="tournament_no_matches_yet">this tournament has no matches yet</string>
    <string name="tournament_no_teams_yet">this tournament has no teams yet</string>
    <string name="no_teams_yet">there are no teams yet</string>
    <string name="no_tournaments_yet">there are no tournaments yet</string>
    <string name="add_match">Add Match</string>
    <string name="select_group">Select Group</string>
    <string name="select_team">Select Team</string>
    <string name="finish_match">Finish Match</string>
    <string name="fill_all_fields">please fill all fields</string>
    <string name="edit_location">Edit Location</string>
    <string name="create_location">Create Location</string>
    <string name="edit_team">Edit Team</string>
    <string name="create_team">Create Team</string>
    <string name="create_tournament">Create Tournament</string>
    <string name="select_icon">Select Icon</string>
    <string name="date">Date</string>
    <string name="time">Time</string>


    <array name="teamNames">
        <item>Rock Dancers</item>
        <item>Little Babies</item>
        <item>Smiley Faces</item>
        <item>Fantastic Four</item>
        <item>Avengers</item>
        <item>Private Monkeys</item>
        <item>Portugal Purple Jackets</item>
        <item>Purple Tigers</item>
        <item>Beautiful Bears</item>
        <item>The Postal Thunderballs</item>
        <item>Bouncing Grunting Chillers</item>
        <item>Indigo Orphans</item>
        <item>El Magic Honkers</item>
        <item>Sunday Tundra Godzillas</item>
        <item>The Prawns</item>
        <item>Furious Sky</item>
        <item>Foul Cloud Flashers</item>
        <item>Final Streak Wankers</item>
        <item>Raw Idiots</item>
        <item>Angry Miltons</item>
        <item>Terrible Finish</item>
        <item>The Bacon Rush</item>
        <item>Dirty Fire Gals</item>
    </array>

</resources>
