<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rounded_corners_background"
    android:backgroundTint="@color/surface"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="Group A"
            android:textColor="@color/onBackground2"
            android:textSize="14sp" />


        <TextView
            android:id="@+id/text_view_m"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/m_for_matches"
            android:textAlignment="center"
            android:textColor="@color/onSurface"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_pts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pts_for_points"
            android:textAlignment="center"
            android:textColor="@color/onSurface"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_gs"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gs_for_goals_scored"
            android:textAlignment="center"
            android:textColor="@color/onSurface"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_gc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gc_for_goals_conceded"
            android:textAlignment="center"
            android:textColor="@color/onSurface"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_dif"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dif_for_difference"
            android:textAlignment="center"
            android:textColor="@color/onSurface"
            android:textSize="14sp" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTeams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
